<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="edit_message">Enter text</string>
    <string name="button_show">Show</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_message">ShowMessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_sent">Message sent</string>
    <string name="message_saved">Message saved</string>
    <string name="title_activity_save_message">SaveMessageActivity</string>
    <string name="title_activity_send_message">SendMessageActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_activity_info">Server authentication credentials:</string>
    <string name="login_activity_username">Username:</string>
    <string name="login_activity_password">Password:</string>
    <string name="login_activity_enter_username">Enter username</string>
    <string name="login_activity_enter_password">Enter password</string>
    <string name="login_activity_login_button">Login</string>

</resources>
