<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.firstapp.LoginActivity$PlaceholderFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_info"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:id="@+id/textView1"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/login_activity_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_enter_username"
        android:id="@+id/editText1"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:text="@string/login_activity_password"
        android:id="@+id/textView3"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_enter_password"
        android:inputType="textPassword"
        android:id="@+id/editText2"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_login_button"
        android:textColor="#FFFFFF"
        android:id="@+id/button"
        android:onClick="loginData"/>

</LinearLayout>